--- a/Expert.WebShop.Zavrsni/Expert.WebShop.Zavrsni.csproj
+++ b/Expert.WebShop.Zavrsni/Expert.WebShop.Zavrsni.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all" />
     <PackageReference Include="Microsoft.IdentityModel.Logging" Version="6.30.1" />
+    <PackageReference Include="Radzen.Blazor" Version="4.11.1" />
   </ItemGroup>
 
   <ItemGroup>
