--- a/Expert.WebShop.Zavrsni/Expert.WebShop.Zavrsni.csproj
+++ b/Expert.WebShop.Zavrsni/Expert.WebShop.Zavrsni.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all" />
     <PackageReference Include="Microsoft.IdentityModel.Logging" Version="6.30.1" />
@@ -16,6 +17,10 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Slike\" />
   </ItemGroup>
 
 </Project>
